# AlorPy

./: README.md  pyproject.toml  requirements.txt
alor/: __init__.py  alor.py  config.py
alor/examples/: 01_connect.py  02_accounts.py  03_ticker.py  04_bars.py  05_stream.py  06_transactions.py
src/: config.py
src/examples/: 01_connect.py  02_accounts.py  03_ticker.py  04_bars.py  05_stream.py  06_transactions.py
